src/test/run-pass/unique-mutable.rs
fn main() {
    let i = ~mut 0;
    *i = 1;
    assert *i == 1;
}